assets/css/responsive_layout.css
/* CSS for responsive layout on screens between 320px and 480px*/
@media only screen and (min-width: 320px) and (max-width: 480px) {

    html {
        overflow-x: hidden !important;
    }

    .main-container {
        width: 400px !important;
        max-width: 100vw !important;
        margin: 0 auto !important;
    }

    header {
        display: block !important;
    }

    .top-menu-container{
        display: none !important;
    }

    .header-bar {
        justify-content: space-between !important;
        align-items: center !important;
        width: 360px !important;
        position: relative !important;
        padding: 5px 15px !important;
    }

    .header-bar-menu {
        align-items: center !important;
        justify-content: space-between !important;
        flex-direction: column !important;
        gap: 10px !important;
        padding: 20px 0 !important;
    }

    .header-bar-search {
        width: 220px !important;
        position: relative !important;
        height: 40px !important;
    }

    .search-btn {
        width: 100px !important;
    }

    .header-right {
        position: absolute !important;
        right: 20px !important;
        top: 8px !important;
    }

    .header-bar-logo {
        width: 100px !important;
        margin-right: 190px !important;
        top: -20px !important;
    }

    .menu-icon {
        display: block !important;
    }

    .topnav {
        width: 360px !important;
        flex-direction: column !important;
        position: relative !important;
        padding: 5px 15px !important;
        margin: 0 !important;
    }

    .dropdown {
        margin-bottom: 10px;
        width: 360px !important;
    }

    .dropdown-content {
        width: 360px !important;
        margin: 0 !important;
        display: none !important;
        justify-content: center !important;
        align-items: center !important;
        flex-direction: column !important;
        padding: 15px 0 !important;
        background-color: #faf3f3;
        border-bottom: 1px solid #e7e7e7;
    }

    .dropdown:hover .dropdown-content {
        display: flex !important;
    }

    .all-departments-btn {
        width: 100% !important;
        margin: 0 !important;
        padding: 15px 0 !important;
        background-color: #faf3f3;
        border-bottom: 1px solid #e7e7e7;
    }

    .nav-item{
        width: 100% !important;
        margin: 0 !important;
        padding: 15px 0 !important;
        background-color: #faf3f3;
        border-bottom: 1px solid #e7e7e7;
    }

    .mega-dropdown {
        width: 100% !important;
        margin: 0 !important;
        background-color: #faf3f3;
    }

    .mega-dropdown-content {
        width: 360px !important;
        flex-wrap: wrap !important;
        gap: 0 !important;
        padding: 0 !important;
        justify-content: center !important;
        align-items: center !important;
    }

    .main-slide {
        width: 360px !important;
        height: 500px !important;
        padding: 5px 15px !important;
    }

    .slide-content {
        margin-top: 60px !important;
    }
    
    .slide-head {
        width: 200px !important;
    }
    
    .slide-text {
        width: 270px !important;
    }

    .slide-image {
        width: 360px !important;
        height: 500px !important;
    }

    .slide-image img {
        width: 100% !important;
        height: 100% !important;
        object-fit: cover !important;
        object-position: left !important;
    }

    .featured-container {
        max-width: 360px !important;
        padding: 5px 15px !important;
    }

    .deals-container {
        width: 360px !important;
        flex-direction: column !important;
        height: 200px !important;
        padding: 5px 15px !important;
        margin: 0 0 250px 0 !important;
    }

    .deal {
        width: 360px !important;
    }

    .deal:nth-child(2) {
        margin-top: 210px !important;
    }

    .deal-img {
        width: 100% !important;
        height: 190px !important;
    }

    .pop-prod-container {
        width: 360px !important;
        flex-direction: column !important;
        padding: 5px 15px !important;
        margin: 0 !important;
    }

    .pop-prod {
        display: flex !important;
        flex-wrap: wrap !important;
        width: 360px !important;
        margin-top: 40px !important;
        gap: 16px !important;
    }

    .pop-prod-card {
        display: flex !important;
        flex-direction: column !important;
        justify-content: center !important;
        width: 360px !important;
        height: auto !important;
        margin: 0 !important;
    }

    .dbs-container {
        width: 360px !important;
        flex-direction: column !important;
        padding: 5px 15px !important;
        margin: 40px 0 !important;
    }

    .dbs {
        display: flex !important;
        flex-wrap: wrap !important;
        width: 360px !important;
        margin-top: 40px !important;
        justify-content: center !important;
        gap: 16px !important;
    }

    .dbs-banner-card {
        width: 350px !important;
    }

    .dbs-card {
        width: 310px !important;
    }

    .app-container {
        width: 360px !important;
        flex-direction: column !important;
        padding: 5px 15px !important;
        margin: 40px 0 !important;
    }

    .app-wrapper {
        width: 360px !important;
        flex-direction: column !important;
        justify-content: center !important;
        align-items: center !important;
        margin: 0 !important;
    }

    .app-content {
        width: 360px !important;
        flex-direction: column !important;
        justify-content: center !important;
        align-items: center !important;
        margin: 0 !important;
        gap: 10px !important;
    }

    .app-form {
        width: 360px !important;
        flex-direction: column !important;
        justify-content: center !important;
        align-items: center !important;
        margin: 0 !important;
        gap: 10px !important;
    }

    .app-form-input {
        width: 350px !important;
        margin: 0 !important;
    }

    .app-form-btn {
        margin: 0 !important;
    }

    .app-download {
        width: 360px !important;
        flex-direction: column !important;
        justify-content: center !important;
        align-items: center !important;
        margin: 0 !important;
        gap: 10px !important;
    }

    .download-options {
        width: 360px !important;
        flex-direction: row !important;
        justify-content: center !important;
        align-items: center !important;
        margin: 0 !important;
        gap: 10px !important;
    }

    .features-container {
        width: 360px !important;
        flex-direction: column !important;
        padding: 5px 15px !important;
        margin: 40px 0 !important;
    }

    .features {
        display: flex !important;
        flex-wrap: wrap !important;
        width: 360px !important;
        margin-top: 40px !important;
        justify-content: center !important;
        gap: 16px !important;
    }

    .feature-card {
        width: 360px !important;
    }

    footer {
        width: 360px !important;
        flex-direction: column !important;
        padding: 5px 15px !important;
        margin: 0 !important;
    }

    .footer-top-wrapper {
        width: 360px !important;
        flex-wrap: wrap !important;
        justify-content: space-between !important;
        align-items: center !important;
        margin: 40px 0 !important;
        gap: 40px 0 !important;
    }

    .footer-category-list-container {
        width: 360px !important;
        flex-direction: column !important;
        justify-content: center !important;
        align-items: center !important;
        margin: 0 !important;
    }

    .footer-category-head {
        width: 360px !important;
        flex-direction: column !important;
        margin: 0 !important;
    }

    .footer-category-lists {
        width: 360px !important;
        margin: 0 !important;
    }

    .footer-list-container {
        flex: none !important;
        height: auto !important;
    }

    .footer-list {
        width: 140px !important;
        flex-direction: column !important;
        margin: 0 !important;
    }

    /* 2. ve 4. listelerin width değerleri 170px olarak ayarlandı. */
    .footer-list:nth-child(1),
    .footer-list:nth-child(3) {
        width: 180px !important;
    }

    .footer-center-wrapper {
        width: 360px !important;
        height: auto !important;
        flex-direction: column !important;
        justify-content: center !important;
        align-items: center !important;
        margin: 0 !important;
        gap: 10px !important;
    }

    .footer-download-options{
        width: 195px !important;
        flex-direction: row !important;
        justify-content: space-between !important;
        align-items: center !important;
        margin: 0 !important;
        gap: 5px !important;
    }

    .footer-download-option{
        height: auto !important;
        width: 100px !important;
    }

    .footer-download-option img {
        width: 100% !important;
        height: 100% !important;
        object-fit: cover !important;
    }

    .footer-center-left {
        width: 360px !important;
        gap: 35px !important;
    }
    
    .payment-partners {
        width: 195px !important;
        flex-wrap: wrap !important; 
        justify-content: center !important;
        align-items: center !important;
        gap: 0 !important;
    }

    .footer-bottom-wrapper {
        width: 360px !important;
        flex-wrap: wrap !important;
        justify-content: space-between !important;
        align-items: center !important;
        margin: 40px 0 !important;
        gap: 40px 0 !important;
    }
}

